--- a/Expression2Sql/Expression2Sql.csproj
+++ b/Expression2Sql/Expression2Sql.csproj
@@ -60,7 +60,7 @@
     <Compile Include="IExpression2Sql.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Expression2SqlProvider.cs" />
-    <Compile Include="SqlPack.cs" />
+    <Compile Include="SqlBuilder.cs" />
     <Compile Include="ExpressionToSql.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
