--- a/Expression2SqlTest/Expression2SqlTest.csproj
+++ b/Expression2SqlTest/Expression2SqlTest.csproj
@@ -41,13 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DbHelper.cs" />
-    <Compile Include="Mapping.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\City.cs" />
     <Compile Include="Models\Class.cs" />
     <Compile Include="Models\Country.cs" />
-    <Compile Include="Orm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Student.cs" />
@@ -59,6 +56,7 @@
       <Name>Expression2Sql</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
